[package]
name = "kyori-component-json"
version = "0.2.1"
edition = "2024"
description = "A library for serializing and deserializing Kyori Component JSON content"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/walker84837/kyori-component-json"

[lib]
doc-scrape-examples = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
minimessage = []